--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,3 +1,151 @@
+/*  modal / editMask */
+
+#waitingIcon{
+  width: 100px;
+  height: 100px;
+  animation: flip 1s linear infinite;
+}
+
+@keyframes flip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+
+}
+
+.bodyModal{
+  overflow: hidden;
+}
+
+.hiddener{
+  opacity: 0 !important;
+  display: none !important;
+}
+
+#modalContainer{
+  width: 100%;
+  height:100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center center;
+  background-color: rgba(0,0,0,0.5);
+  position: fixed; 
+  top: 0;
+  left: 0;
+  z-index: 200;
+  
+  opacity: 1;
+  backdrop-filter: blur(10px);
+  transition: 1s all;
+}
+
+#editMask{
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  display: grid;
+  grid-template-rows: 30px 1fr 30px;
+
+}
+
+#editTitle{
+  
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 10px;
+  line-height: 1.4rem;
+  border-bottom: 1px solid #CCC;
+
+  height: auto;
+
+}
+
+
+#editForm{
+  display: grid;
+  grid-template-rows: 1fr;
+  gap: 10px;
+  padding: 10px;
+}
+
+#editActions{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 10px;
+  place-content: center center;
+}
+
+.action-button, .service-button{
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.5s all;
+  background-color: var(--secondary-color);
+  color: #FFF;
+  display: grid;
+  place-content: center center;
+  font-size: 0.9rem;
+
+}
+
+.action-button{
+  background-color: var(--primary-color);
+  color: #FFF;
+  font-weight: 700;
+}
+
+#editForm input, #editForm select {
+  padding: 5px;
+  border: 1px solid #CCC;
+  border-radius: 5px;
+
+  font-size: 1.1rem;
+}
+
+#toaster{
+  position: fixed;
+  
+  top: 10px;
+  right: 10px;
+
+  z-index: 2000;
+  display: grid;
+  grid-template-rows: auto;
+  gap: 10px;
+  grid-template-columns: 30px 1fr;
+  border-radius: 5px;
+
+  min-width:300px;
+  min-height: 40px;
+
+  background-color: var(--secondary-color);
+  box-shadow: 2px 2px 2px var(--dark-color);
+  place-items: center start;
+  font-size: 1.1rem;
+  padding: 10px;
+
+  transition: 0.5s all ;
+}
+
+.success{
+
+  background-color: var(--success-color) !important;
+  color: #FFF;
+  padding: 10px;
+  
+}
+
+
+.failed{
+  background-color: var(--danger-color) !important;
+  color: #FFF;
+}
+
 /*  contenitore dell'applicazione  */
 
 #appContainer{
@@ -57,31 +205,6 @@
 }
 
 
-/*  modal / editMask */
-#modalContainer{
-  width: 100%;
-  height:100vh;
-  display: grid;
-  grid-template-columns: 1fr;
-  place-items: center center;
-  background-color: rgba(0,0,0,0.5);
-  position: fixed; 
-  top: 0;
-  left: 0;
-  z-index: 100;
-
-  transition: 0.5s all;
-}
-
-#editMask{
-  background-color: #fff;
-  border-radius: 20px;
-  padding: 20px;
-  display: grid;
-  grid-template-rows: 30px 1fr 30px;
-
-}
-
 
 /*  main table / data container */
 
@@ -90,13 +213,12 @@
   margin:auto;
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: repeat( 7, auto );
+  grid-template-columns: repeat( 7, 1fr );
   /**/gap: 1px;
   overflow-y: auto;
   margin-top: 0px;
-  
-  height: calc( 100vh - 100px );
 
+  height: calc( 100vh - 100px );
 }
 
 .sorter{
@@ -116,6 +238,10 @@
   position:sticky;
   top:0px;
   z-index: 100;
+
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 
@@ -185,6 +311,12 @@
   color:#FFF;
 }
 
+
+#navbar #totale{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center center;
+}
 
 
 
