--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -213,7 +213,7 @@
   margin:auto;
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: repeat( 7, 1fr );
+  grid-template-columns: repeat( 7, auto );
   /**/gap: 1px;
   overflow-y: auto;
   margin-top: 0px;
@@ -226,10 +226,26 @@
   user-select: none
 }
 
+
+.filterField{
+  position: absolute;
+  width: 200px;
+  top:30px;
+  right: 0px;
+  display: grid;
+  background-color: var(--info-color);
+  color: var(--light-color);
+  padding: 10px;
+  gap: 5px;
+  border-radius: 3px;
+  background-color: var(--head-color);
+}
+
+
 .headField{
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  padding: 10px;
+  grid-template-columns: 1fr 20px 20px;
+  padding: 5px;
   background-color: var( --head-color );
   color: var( --light-color );
   gap: 5px;
@@ -310,12 +326,18 @@
 #navibar a:hover{
   color:#FFF;
 }
+#navibar #elementipp{
+  text-align:right;
+  width:100%;
+}
 
 
-#navbar #totale{
+#totale{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: column;
   place-items: center center;
+
+
 }
 
 
@@ -368,5 +390,9 @@
     grid-template-columns: repeat( 5, auto );
   }
 
+  .headField{
+    font-size: 0.6rem;
+    font-weight: 500;
+  }
 
 }
