--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -26,7 +26,7 @@
 
 .login-box .fields{
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
   gap: 5px;
   place-items: center center;
 }
@@ -36,6 +36,7 @@
   border-radius: 10px;
   padding: 10px;
   font-size: 1.2rem;
+  text-align: center;
 }
 
 .login-box input[type="submit"]{
